client textinputv3: reset cursorRect when enableSurface

When enabling a surface(including entering a surface),
set_cursor_rectangle can be missing if the previous value
is the same as the current one.

(cherry-picked from qtbase c3c572b1087f3799262ed195a6e4740f27789aca)

Done-by: lilydjwg li
Fixes: QTBUG-135341
Pick-to: 6.8 6.5
Change-Id: I02a7c28c1018ef70c2f4f27a1697201c64cf9ed8
Reviewed-by: Liang Qi <liang.qi@qt.io>